# Unit tests

add_subdirectory(crypto)
add_subdirectory(primitives)
add_subdirectory(consensus)
add_subdirectory(chainstate)
add_subdirectory(validation)
add_subdirectory(p2p)
add_subdirectory(mempool)
add_subdirectory(evm)
add_subdirectory(settlement)
add_subdirectory(layer2)
add_subdirectory(wallet)
add_subdirectory(rpc)

add_subdirectory(node)
add_subdirectory(storage)

add_subdirectory(layers)

add_subdirectory(monetary)
